From varun brnach

--- a/tip.css
+++ b/tip.css
@@ -27,7 +27,7 @@ main
 }
 h1{
     text-align: center;
-    border: 5px solid white;
+    border: px solid white;
     padding: 5px;
     background-color: #d800ff;
     border-radius: 12px;
